--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -28,3 +28,7 @@ body {
 div.body h1, div.body h2, div.body h3, div.body h4, div.body h5, div.body h6 {
     font-family: "Open Sans",sans-serif;
 }
+
+span.underline {
+    text-decoration: underline;
+}
