--- a/source/_static/v2.css
+++ b/source/_static/v2.css
@@ -1,45 +1,53 @@
 div.body h1, h2{
-    color: #036aff;
+    color: #03326b;
 }
 
 div.document {
-    background-color: rgba(48, 107, 255, 0.3);
+    background-color: #03326b; /* rgba(48, 107, 255, 0.3);*/
 }
 
 a {
-    color: #036aff;
+    color: #03326b;
 }
 
 div.sphinxsidebar a {
-    color: #036aff;
+    color: #fff;
 }
 
 dl.py dt, code {
-    color: #036aff;
+    color: #03326b;
 }
 
 div.header-wrapper {
-    background-color: #ff9803;
+    background-color: #ff9b07;
+}
+
+div.header-wrapper h1 {
+    color: #03326b;
 }
 
 div.header h1 {
-    color: #036aff;
+    color: #03326b;
 }
 
 p.payoff {
-    color: #036aff;
+    color: #03326b;
 }
 
 .searchformwrapper {
-    border: 1px solid #036aff;
+    border: 1px solid #03326b;
 }
 
 .search button[type="submit" i] {
-    color: #036aff;
+    color: #03326b;
 }
 
-div.sphinxsidebar input, div.sphinxsidebar h3, div.sphinxsidebar h4  {
-    color: #036aff;
+div.sphinxsidebar h3, div.sphinxsidebar h4 {
+    color: #fff;
+}
+
+div.sphinxsidebar input {
+    color: #03326b;
 }
 
 .logo img {
@@ -48,17 +56,17 @@ div.sphinxsidebar input, div.sphinxsidebar h3, div.sphinxsidebar h4  {
 
 .dropbtn {
   background-color: transparent;
-  color: #036aff;
+  color: #03326b;
 }
 
 .dropdown-content a {
-  color: #036aff;
+  color: #03326b;
 }
 
 .dropdown-content a:hover {background-color: rgba(48, 107, 255, 0.3);}
 
 .dropdown-content a.selected, .dropdown-content a.selected:hover {
-    background: #036aff;
+    background: #03326b;
     color: #fff;
 }
 
