--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -22,7 +22,8 @@ div.document {
 
 div.body {
     height: 100%;
-    max-width: 70%;
+    width: 62%;
+    min-width: 62%;
     padding: 2% 3% 0 3%;
 }
 
@@ -109,7 +110,7 @@ div.sphinxsidebar {
     height: 100%;
     position: absolute;
     right: 0;
-    width: 20%;
+    width: 30%;
 }
 
 p.logo {
@@ -123,15 +124,25 @@ p.logo {
 }
 
 div.header-wrapper {
-    padding: 5px;
     /*background-color: #ffb000;*/
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 2%;
+}
+
+div.header-wrapper h1 {
+    margin: 1%;
+    font-weight: lighter;
 }
 
 div.header {
-    width: 66%;
+    /*width: 40%;*/
+    margin-right: 2%;
+    margin-left: auto;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 40%;
 }
 
 div.header h1 {
@@ -157,7 +168,7 @@ p.payoff {
 }
 
 #searchbox {
-    width: 80%;
+    width: 100%;
 }
 
 .search input {
@@ -174,7 +185,7 @@ p.payoff {
 }
 
 .search input[type="text" i] {
-    width: 85%;
+    width: 80%;
 }
 
 .search button[type="submit" i] {
@@ -200,6 +211,10 @@ div.sphinxsidebar input {
     font-family: "Roboto", Corbel, Avenir, "Lucida Grande", "Lucida Sans", sans-serif;
     /*color: #004d63;*/
     font-size: 1em;
+}
+
+div.sphinxsidebar h3, div.sphinxsidebar h4 {
+    font-family: "Roboto", Corbel, Avenir, "Lucida Grande", "Lucida Sans", sans-serif;
 }
 
 /*
