--- a/scripts/templates/__deploy__.py.j2
+++ b/scripts/templates/__deploy__.py.j2
@@ -1,39 +1,55 @@
 name = "{{ name }}"
 
+# add files to the container
 add_files = (
-    "ruleset.py",
+    {{ add_files }}
 )
 
-add_modules = True  # find modules in directory (folders having __init__.py file) and add them to container
+# find modules in directory (folders having __init__.py file) and add them to container
+add_modules = True
 
+# extra Dockerfile commands expressed in the form:
+# ("RUN", "pip install some-useful-lib==1.0")
 extra_commands = (
-#    ("RUN", "pip install some-useful-lib==1.0"),
+    {{ extra_commands }}
 )
 
+# extra labels to provide to knative service
 labels = {
-    "serving.knative.dev/visibility": "cluster-local",
-    "krules.airspot.dev/type": "ruleset",
-    "krules.airspot.dev/ruleset": "{{ name }}"
+    {{ labels }}
 }
 
+# annotations in the template section of knative service spec (revision)
+# e.g.: "autoscaling.knative.dev/minScale": "1",
 template_annotations = {
-    #"autoscaling.knative.dev/minScale": "1",
+    {{ template_annotations }}
 }
 
+# you can specify the service account under which the service will run
 #service_account = "my-service-account"
 
+# environment variables to set the service with
+# important variables are:
+# PUBLISH_PROCEVENTS_LEVEL:
+# controls what metrics (processing events) are generated before they are published
+# possible values are:
+# "0" - nothing (best optimization),
+# "1" - skip payload diffs (suitable for production if you want to catch errors),
+# "2" - everything (for dev, includes payload alteration informations)
+# PUBLISH_PROCEVENTS_MATCHES:
+# if level >= 1 controls which metrics are published on the broker
+# possible values are:
+# "*" - this is the default and means all metrics are published
+# alternatively you can specify the conditinal part of a json path expression
+# applicable on the metric payload. You can specify more than one by using the "," as a separator
+# examples are:
+#  "got_errors=true" - all metrics related to processed rules having exceptions
+#  "got_errors=true; rule_name='my-rule-name" - all metrics for specified rule and all metrics containing exceptions
+#  "passed=true" - all metrics reporting the section filters is passed
 environ = {
-    # what metrics are generated (before they are published)
-    # 0 - nothing (best optimization), 1 - skip payload diffs, 2 - everything (for dev)
-    "PUBLISH_PROCEVENTS_LEVEL": "2",
-    # what metrics are acutally published
-    "PUBLISH_PROCEVENTS_MATCHES": "*",
-    # you can define more than one expression speratated by ';'
-    # if you want to catch errors..
-    # "PUBLISH_PROCEVENTS_MATCHES": "got_errors=true",
-    # if you want all errors and one specific rule..
-    # "PUBLISH_PROCEVENTS_MATCHES": "got_errors=true; rule_name='my-rule-name",
+    {{ environ }}
 }
+
 
 triggers = (
 #    {
