--- a/adminssion-webhooks/webhook/k8s/service.yaml.j2
+++ b/adminssion-webhooks/webhook/k8s/service.yaml.j2
@@ -9,7 +9,7 @@ spec:
     replicas: 1
     selector:
         matchLabels: 
-            app: name
+            app: {{ name }}
     template:
         metadata:
             labels:
@@ -24,6 +24,13 @@ spec:
                 ports: 
                   - containerPort: 8443
                     name: webhook-api
+                env:
+                  - name: PUBLISH_PROCEVENTS_LEVEL
+                    value: "2"
+                  - name: PUBLISH_PROCEVENTS_MATCHING
+                    value: "*"
+                  - name: K_PROCEVENTS_SINK
+                    value: "http://broker-ingress.knative-eventing.svc.cluster.local/krules-system-dev/default"
                 volumeMounts:
                   - name: {{ name }}-tls
                     mountPath: /run/secrets/tls
@@ -33,5 +40,43 @@ spec:
               - name: {{ name }}-tls
                 secret:
                     secretName: {{ name }}-tls
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ name }}
+  namespace: {{ namespace}}
+spec:
+  selector:
+    app: {{ name }}
+  ports:
+    - port: 443
+      targetPort: webhook-api
+
+---
+apiVersion: eventing.knative.dev/v1
+kind: Broker
+metadata:
+  name: default
+  namespace: {{ namespace }}
+---
+apiVersion: sources.knative.dev/v1alpha2
+kind: SinkBinding
+metadata:
+ name: {{ name }}
+ namespace: {{ namespace }}
+spec:
+ subject:
+   apiVersion: apps/v1
+   kind: Deployment
+   selector:
+     matchLabels:
+       app: {{ name }}
+ sink:
+   ref:
+     apiVersion: eventing.knative.dev/v1beta1
+     kind: Broker
+     namespace: {{ namespace }}
+     name: default
 
 
