--- a/source/_static/v2.css
+++ b/source/_static/v2.css
@@ -19,7 +19,7 @@ dl.py dt, code {
 }
 
 div.header-wrapper {
-    background-color: #ff9b07;
+    background-color: #ffb806;
 }
 
 div.header-wrapper h1 {
