--- a/webhook/k8s/admissionconfig.yaml.j2
+++ b/webhook/k8s/admissionconfig.yaml.j2
@@ -41,6 +41,13 @@ webhooks:
         operations:
           - CREATE
         #- UPDATE
+#      - apiGroups: ["krules.airspot.dev"]
+#        apiVersions: ["*"]
+#        resources: ["configurationproviders"]
+#        scope: "Namespaced"
+#        operations:
+#          - CREATE
+#          #- UPDATE
 #      - apiGroups: [""]
 #        apiVersions: ["v1"]
 #        resources: ["namespaces"]
