--- a/helper/k8s/service.yaml.j2
+++ b/helper/k8s/service.yaml.j2
@@ -24,6 +24,8 @@ spec:
                   - containerPort: 8080
                     name: helper
                 env:
+                  - name: CE_SOURCE
+                    value: {{ name }}
                   - name: PUBLISH_PROCEVENTS_LEVEL
                     value: "2"
                   - name: PUBLISH_PROCEVENTS_MATCHING
