--- a/controllers/webhook/k8s/service.yaml.j2
+++ b/controllers/webhook/k8s/service.yaml.j2
@@ -22,15 +22,15 @@ spec:
                 ports:
                   - containerPort: 8443
                     name: webhook-api
+                {% if debug_procevents_sink %}
                 env:
                   - name: PUBLISH_PROCEVENTS_LEVEL
                     value: "2"
                   - name: PUBLISH_PROCEVENTS_MATCHING
                     value: "*"
                   - name: K_PROCEVENTS_SINK
-                    value: http://broker-ingress.knative-eventing.svc.cluster.local/dev8850/procevents
-                  - name: LOGGING_LEVEL
-                    value: "20"
+                    value: {{ debug_procevents_sink }}
+                {% endif %}
                 volumeMounts:
                   - name: {{ name }}-tls
                     mountPath: /run/secrets/tls
