doc integrate local_utils in make.py

--- a/controllers/helper/k8s/service.yaml.j2
+++ b/controllers/helper/k8s/service.yaml.j2
@@ -23,8 +23,10 @@ spec:
                 ports: 
                   - containerPort: 8080
                     name: helper
-                {% if debug_procevents_sink %}
                 env:
+                  - name: CE_SOURCE
+                    value: {{ name }}
+                {% if debug_procevents_sink %}
                   - name: PUBLISH_PROCEVENTS_LEVEL
                     value: "2"
                   - name: PUBLISH_PROCEVENTS_MATCHING
