krules_dev init make.py

--- a/krules-dev-support/krules-dev/setup.py.j2
+++ b/krules-dev-support/krules-dev/setup.py.j2
@@ -7,7 +7,7 @@ def read(fname):
 
 setup(
     name='krules-dev',
-    version="0.8.5.1",
+    version="{{ release_version }}",
     author="Alberto Degli Esposti",
     author_email="alberto@arispot.tech",
     description="KRules dev utilities",
