remove local_utils

--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -6,7 +6,7 @@ def read(fname):
     return open(os.path.join(os.path.dirname(__file__), fname)).read()
 
 setup(
-    name='krules-dev',
+    name='krules-dev-support',
     version="{{ release_version }}",
     author="Alberto Degli Esposti",
     author_email="alberto@arispot.tech",
