--- a/doc/source/conf.py.j2
+++ b/doc/source/conf.py.j2
@@ -13,8 +13,8 @@
 import os
 import sys
 
-sys.path.insert(0, "../../libs/krules-core")
-sys.path.insert(0, "../../libs/krules-k8s-functions")
+sys.path.insert(0, os.path.abspath("../../libs/krules-core"))
+sys.path.insert(0, os.path.abspath("../../libs/krules-k8s-functions"))
 
 
 # -- Project information -----------------------------------------------------
