--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -22,7 +22,7 @@ setup(
     ],
     python_requires='>3.7',
     install_requires=[
-        'jinja2==2.11.3',
+        'Jinja2==3.0.1',
         'sane-build==7.1',
     ],
     setup_requires=[
