controllers update sinkbinding apiversion

--- a/controllers/helper/k8s/service.yaml.j2
+++ b/controllers/helper/k8s/service.yaml.j2
@@ -49,7 +49,7 @@ spec:
       targetPort: helper
 
 ---
-apiVersion: sources.knative.dev/v1alpha2
+apiVersion: sources.knative.dev/v1
 kind: SinkBinding
 metadata:
  name: {{ name }}
