--- a/controllers/webhook/k8s/service.yaml.j2
+++ b/controllers/webhook/k8s/service.yaml.j2
@@ -74,7 +74,7 @@ spec:
        app: {{ name }}
  sink:
    ref:
-     apiVersion: eventing.knative.dev/v1beta1
+     apiVersion: eventing.knative.dev/v1
      kind: Broker
      namespace: {{ namespace }}
      name: default
