--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -24,6 +24,7 @@ setup(
     install_requires=[
         'Jinja2==3.0.1',
         'sane-build==7.1',
+        'python-dotenv==0.17.1',
     ],
     setup_requires=[
         'pytest-runner',
