--- a/controllers/helper/k8s/service.yaml.j2
+++ b/controllers/helper/k8s/service.yaml.j2
@@ -49,7 +49,7 @@ spec:
       targetPort: helper
 
 ---
-apiVersion: sources.knative.dev/v1alpha2
+apiVersion: sources.knative.dev/v1
 kind: SinkBinding
 metadata:
  name: {{ name }}
@@ -63,7 +63,7 @@ spec:
        app: {{ name }}
  sink:
    ref:
-     apiVersion: eventing.knative.dev/v1beta1
+     apiVersion: eventing.knative.dev/v1
      kind: Broker
      namespace: {{ namespace }}
      name: default
