--- a/controllers/webhook/k8s/service.yaml.j2
+++ b/controllers/webhook/k8s/service.yaml.j2
@@ -60,7 +60,7 @@ metadata:
   name: default
   namespace: {{ namespace }}
 ---
-apiVersion: sources.knative.dev/v1alpha2
+apiVersion: sources.knative.dev/v1
 kind: SinkBinding
 metadata:
  name: {{ name }}
@@ -74,7 +74,7 @@ spec:
        app: {{ name }}
  sink:
    ref:
-     apiVersion: eventing.knative.dev/v1beta1
+     apiVersion: eventing.knative.dev/v1
      kind: Broker
      namespace: {{ namespace }}
      name: default
