--- a/images/django-image-base/site/urls.py.j2
+++ b/images/django-image-base/site/urls.py.j2
@@ -17,18 +17,22 @@ Including another URLconf
 from django.contrib import admin
 from django.urls import path, re_path, reverse_lazy, include
 from django.views.generic import RedirectView
+import os
+
+configuration_key = os.environ.get("CONFIGURATION_KEY", "django")
 
 from krules_core.providers import configs_factory
-url_settings = configs_factory().get("{{ configuration_key }}", "url_settings")
+url_settings = configs_factory().get(configuration_key, {}).get("url_settings", {})
 
 urlpatterns = []
 
-if url_settings.get("enable_admin": False):
-    url_patters.append(path('admin/', admin.site.url)
+if url_settings.get("enable_admin", False):
+    urlpatterns.append(path('admin/', admin.site.urls))
 if url_settings.get("root_redirect"):
-    url_patterns.append(re_path(r'^$', RedirectView.as_view(url=reverse_lazy('admin:index'))))
-for p in  url_settiungs.get("path_includes", []):
-    url_patterns.append(
-        path(p["path"], include(p["include")),
+    urlpatterns.append(re_path(r'^$', RedirectView.as_view(url=reverse_lazy(url_settings.get("root_redirect")))))
+for p in url_settings.get("path_includes", []):
+    urlpatterns.append(
+        path(p["path"], include(p["include"]))
+    )
 
 
