--- a/dashboard/k8s/config-dashboard-site.yaml.j2
+++ b/dashboard/k8s/config-dashboard-site.yaml.j2
@@ -29,7 +29,9 @@ spec:
         - prettyjson
         - rest_framework
         #- djangochannelsrestframework
-        #- krules
+        {% for app in djangoapps_sources %}
+        - {{ app | replace("-", "_") }}
+        {% endfor %}
         #- krules.scheduler
         #- krules.procevents
         #- krules.cron
