refactored and improved deployment system

--- a/controllers/webhook/k8s/service.yaml.j2
+++ b/controllers/webhook/k8s/service.yaml.j2
@@ -30,6 +30,8 @@ spec:
                     value: "*"
                   - name: K_PROCEVENTS_SINK
                     value: {{ debug_procevents_sink }}
+                  - name: CE_SOURCE
+                    value: krules-webhook
                 {% endif %}
                 volumeMounts:
                   - name: {{ name }}-tls
