add scheduler ruleset

--- a/dashboard/apps/krules-djangoapps-common/setup.py.j2
+++ b/dashboard/apps/krules-djangoapps-common/setup.py.j2
@@ -17,6 +17,7 @@ setup(
     install_requires=[
         'django-prettyjson==0.4.1',
         'djangorestframework>=3.12.4',
+        'pykube-ng==20.10.0',
     ],
     setup_requires=[
         'pytest-runner',
