--- a/dashboard/apps/krules-djangoapps-scheduler/setup.py.j2
+++ b/dashboard/apps/krules-djangoapps-scheduler/setup.py.j2
@@ -15,6 +15,7 @@ setup(
     ],
     python_requires='>3.8',
     install_requires=[
+        'krules-djangoapps-common{% if release_version %}=={{ release_version }}{% endif %}',
         'django-jsoneditor>=0.1.6',
     ],
     setup_requires=[
