--- a/subjects_storages/mongodb/setup.py.j2
+++ b/subjects_storages/mongodb/setup.py.j2
@@ -17,24 +17,27 @@ def read(fname):
     return open(os.path.join(os.path.dirname(__file__), fname)).read()
 
 setup(
-    name='krules-subjects-storage-redis',
-    version="0.8.5.1",
+    name='krules-subjects-storage-mongodb',
+{% if release_version %}
+    version="{{ release_version }}",
+{% endif %}
     author="Alberto Degli Esposti",
     author_email="alberto@arispot.tech",
-    description="KRules redis subjects storage implementation",
+    description="KRules mongodb subjects storage implementation",
     licence="Apache Licence 2.0",
-    keywords="krules subject redis",
-    url="https://github.com/airspot-dev/krules-subjects-storage-redis.git",
+    keywords="krules mongodb",
+    url="https://github.com/airspot-dev/krules-subjects-storage-mongodb.git",
     packages=find_packages(),
-    long_description=read('README.md'),
+    long_description=read('README.rst'),
     classifiers=[
         "Development Status :: 3 - Alpha",
         "License :: OSI Approved :: Apache Software License",
     ],
     install_requires=[
-        'redis>=3.3.5',
-        'anyjson>=0.3.3',
-        'krules-core==0.8.5.1',
+        'pymongo==3.10.1',
+{% if release_version %}
+        'krules-core=={{ release_version }}',
+{% endif %}
     ],
     setup_requires=[
         'pytest-runner',
